# semantix

./: .gitignore  CONTRIBUTION.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  bug_report.yml  config.yml  doc_issue.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: feature_refactor.md
.github/workflows/: ci.yml  commit_lint.yml  deploy_docs.yml  publish.yml  runtime.yml
examples/: 01-quick-start.ipynb  02-data-cleaning.ipynb  03-privacy-scrubbing.ipynb  04-structured-extraction.ipynb  README.md  benchmark.py  demo.ipynb  demo.py
semantix/: __init__.py
semantix/engine/: polars_ops.py
semantix/inference/: manager.py
src/loclean/: __init__.py  _version.py  cache.py
src/loclean/cli/: __init__.py  model.py  model_commands.py
src/loclean/engine/: narwhals_ops.py
src/loclean/extraction/: __init__.py  extract_dataframe.py  extractor.py  grammar_utils.py
src/loclean/inference/: adapters.py  base.py  config.py  factory.py  grammar_registry.py  manager.py  schemas.py
src/loclean/privacy/: __init__.py  detector.py  generator.py  llm_detector.py  regex_detector.py  schemas.py  scrub.py
src/loclean/utils/: __init__.py  resources.py
src/semantix/: __init__.py  _version.py  cache.py
src/semantix/engine/: narwhals_ops.py  polars_ops.py
src/semantix/inference/: adapters.py  base.py  config.py  (+2 more)
tests/: conftest.py
tests/integration/: test_core.py  test_reasoning.py
tests/unit/: test_cache.py
website/: astro.config.mjs  package-lock.json  package.json
(+51 files in other folders)
