[project]
name = "semantix"
version = "0.1.0"
description = "High-performance semantic data cleaning library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
    "llama-cpp-python>=0.2.23",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.66.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
